CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)

PROJECT(registrycleaner)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

## Setting for qt5
SET(USE_QT_LIBRARIES
    Core
)

FIND_PACKAGE(Qt5 REQUIRED ${USE_QT_LIBRARIES})
SET(CMAKE_AUTOMOC ON)

FOREACH(USE_QT_LIBRARY ${USE_QT_LIBRARIES})
INCLUDE_DIRECTORIES(
${Qt5${USE_QT_LIBRARY}_INCLUDE_DIRS}
)
ENDFOREACH()

FOREACH(USE_QT_LIBRARY ${USE_QT_LIBRARIES})
ADD_DEFINITIONS(${Qt5${USE_QT_LIBRARY}_DEFINITIONS})
ENDFOREACH()
## End setting for qt5

## Setting out path
SET(EXECUTABLE_OUT_PATH ${SEAFILE_PROJECT_DIR})

INCLUDE_DIRECTORIES(
  src
)

SET(SRC
    ${PROJECT_SOURCE_DIR}/src/registry.cpp
    ${PROJECT_SOURCE_DIR}/src/main.cpp
)

SET(CMAKE_RC_COMPILE_OBJECT
      "<CMAKE_RC_COMPILER> -i <SOURCE> -o <OBJECT>")

## Add resource file
SET(QRC_SOURCE_FILES resources/seafile.rc)

ADD_EXECUTABLE(registrycleaner ${QRC_SOURCE_FILES} ${SRC} ${USE_QT_LIBRARY})

## Add extern lib
TARGET_LINK_LIBRARIES(registrycleaner shlwapi)
QT5_USE_MODULES(registrycleaner ${USE_QT_LIBRARIES})

INSTALL(TARGETS registrycleaner DESTINATION bin)
